# api/src/modules/auth/dtos/authDto.ts
@@ -22,6 +22,21 @@ export const LoginWithPasswordSchema = z.object({
 });
 
 
+export const ResetPasswordSchema = z.object({
+  body: z.object({
+    email: z.string().trim().email("Email không đúng định dạng."),
+    otp: z.string().length(6, "Mã OTP phải có 6 chữ số"),
+    newPassword: z.string().min(6, "Mật khẩu mới phải có ít nhất 6 ký tự."),
+  }),
+});
+
+export const ChangePasswordSchema = z.object({
+  body: z.object({
+    oldPassword: z.string().min(1, "Vui lòng nhập mật khẩu cũ."),
+    newPassword: z.string().min(6, "Mật khẩu mới phải có ít nhất 6 ký tự."),
+  }),
+});
+
 export const RefreshTokenSchema = z.object({
   body: z.object({
     refreshToken: z.string().min(1, "Refresh Token không được để trống."),
@@ -30,9 +45,9 @@ export const RefreshTokenSchema = z.object({
 
 export type SendOtpDto = z.infer<typeof SendOtpSchema>["body"];
 export type VerifyOtpDto = z.infer<typeof VerifyOtpSchema>["body"];
-export type LoginWithPasswordDto = z.infer<
-  typeof LoginWithPasswordSchema
->["body"];
+export type LoginWithPasswordDto = z.infer<typeof LoginWithPasswordSchema>["body"];
+export type ResetPasswordDto = z.infer<typeof ResetPasswordSchema>["body"];
+export type ChangePasswordDto = z.infer<typeof ChangePasswordSchema>["body"];
 export type RefreshTokenDto = z.infer<typeof RefreshTokenSchema>["body"];
 
 export interface AuthResponseDto {
